remove jdk bug workaround
Signed-off-by: Ludovic Orban <lorban@bitronix.be>